[project]
name = "llm_api_benchmark"
version = "0.1.0"
description = "测试各种大语言模型API性能的工具"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "requests>=2.28.0",
    "tomli>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
]

[project.scripts]
llm-api-benchmark = "llm_api_benchmark.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]